# machine-learning

./: .gitignore  machine-learning.cabal
Algorithms/MachineLearning/: BasisFunctions.hs  Framework.hs  LinearAlgebra.hs  LinearClassification.hs  LinearRegression.hs  Utilities.hs
Algorithms/MachineLearning/Tests/: Data.hs  Driver.hs
