Name:           machine-learning
Version:        0.1
Cabal-Version:  >= 1.2
Category:       Algorithms
Synopsis:       Machine learning algorithms
Description:    Algorithms for machine learning and pattern recognition, based on the book "Pattern Recognition and Machine Learning" by Christopher Bishop
License:        BSD3
License-File:   LICENSE
Author:         Max Bolingbroke
Maintainer:     batterseapower@hotmail.com
Build-Type:     Simple

Flag Tests
        Description:    Enable building the tests
        Default:        False

Flag SplitBase
        Description:    Choose the new smaller, split-up base package
        Default:        True


--Library
--        Exposed-Modules:        Algorithms.MachineLearning.LinearRegression
Executable machine-learning
        Main-Is:                Algorithms/MachineLearning/LinearRegression.hs
        
        Build-Depends:          hmatrix >= 0.4.0.0, HTam
        if flag(splitBase)
                Build-Depends:  base >= 3, process >= 1.0.0.0
        else
                Build-Depends:  base < 3
        
        Extensions:             PatternGuards
        Ghc-Options:            -O2 -fvia-C -Wall

--Executable edit-distance-tests
--        Main-Is:                Text/EditDistance/Tests.hs
--        if flag(splitBase)
--                Build-Depends:  base >= 3, array >= 0.1, random >= 1.0,
--                                QuickCheck >= 1.1
--        else
--                Build-Depends:  base < 3, 
--                                QuickCheck >= 1.1
--        
--        Extensions:             PatternGuards, PatternSignatures, 
--                                RankNTypes, ExistentialQuantification,
--                                ScopedTypeVariables
--        Ghc-Options:            -O2 -fvia-C -Wall -fno-warn-orphans
--        
--        if !flag(tests)
--                Buildable:      False