Name:           machine-learning
Version:        0.1
Cabal-Version:  >= 1.2
Category:       Algorithms
Synopsis:       Machine learning algorithms
Description:    Algorithms for machine learning and pattern recognition, based on the book "Pattern Recognition and Machine Learning" by Christopher Bishop
-- Because of HMatrix and HTam, I have to release this package under GPL
License:        GPL
License-File:   LICENSE
Author:         Max Bolingbroke
Maintainer:     batterseapower@hotmail.com
Homepage:       http://bsp.lighthouseapp.com/projects/15641-hs-machine-learning/overview
Build-Type:     Simple

Flag Tests
        Description:    Enable building the tests
        Default:        False

Flag SplitBase
        Description:    Choose the new smaller, split-up base package
        Default:        True


Library
        Exposed-Modules:        Algorithms.MachineLearning.Framework
                                Algorithms.MachineLearning.LinearRegression

        Build-Depends:          hmatrix >= 0.4.0.0
        if flag(splitBase)
                Build-Depends:  base >= 3
        else
                Build-Depends:  base < 3
        
        Extensions:             PatternSignatures
        Ghc-Options:            -O2 -fvia-C -Wall

Executable machine-learning-tests
        Main-Is:                Algorithms/MachineLearning/Tests/Driver.hs
        
        -- I just need HTam for the GNUPlot module. Probably I should just write my
        -- own GNUPlot interface module instead of depending on such a weird package :-)
        Build-Depends:          hmatrix >= 0.4.0.0, HTam
        if flag(splitBase)
                Build-Depends:  base >= 3, process >= 1.0.0.0
        else
                Build-Depends:  base < 3
        
        Extensions:             PatternSignatures
        Ghc-Options:            -O2 -fvia-C -Wall
        
        if !flag(tests)
                Buildable:      False